--- a/React/Counting.html
+++ b/React/Counting.html
@@ -9,7 +9,7 @@
   <script type="text/babel">
     const root = document.getElementById('root');
     function App() {
-      const [counter, setCounter] = React.useState(0); // 배열의 첫번째 값: 초기값, 두번째 값: 그 값을 바꾸는 함수
+      const [counter, setCounter] = React.useState(0);
       const onClick = () => {
         // setCounter(counter + 1);
         setCounter((current) => current + 1);
@@ -21,7 +21,6 @@
         </div>
       );
     }
-    //render: React element를 가지고 HTML로 만들어 배치한다는 것
     ReactDOM.render(<App />, root);
   </script>
 </html>
